User 1 development is complete

--- a/force-app/main/default/classes/AccountManager.cls
+++ b/force-app/main/default/classes/AccountManager.cls
@@ -10,6 +10,7 @@ global with sharing class AccountManager {
                         FROM account
                         WHERE Id = :accountId];
         return result;
+        // System.debug("Hello");
     }
          
 }
